--- a/al2_jd/al2_jd.vcxproj
+++ b/al2_jd/al2_jd.vcxproj
@@ -173,12 +173,15 @@
   <ItemGroup>
     <ClInclude Include="app.hpp" />
     <ClInclude Include="app_interface.hpp" />
+    <ClInclude Include="assets_io.hpp" />
     <ClInclude Include="config_dialog.hpp" />
     <ClInclude Include="config_io.hpp" />
     <ClInclude Include="hive.hpp" />
+    <ClInclude Include="io_base.hpp" />
     <ClInclude Include="kuro\gdi\renderer\aviutl2.hpp" />
     <ClInclude Include="kuro\gdi\renderer\aviutl2\font_setting\listview.hpp" />
     <ClInclude Include="kuro\gdi\renderer\aviutl2\listbox.hpp" />
+    <ClInclude Include="kuro\gdi\renderer\aviutl2\new_project\dialog.hpp" />
     <ClInclude Include="kuro\gdi\renderer\button.hpp" />
     <ClInclude Include="kuro\gdi\renderer\combobox.hpp" />
     <ClInclude Include="kuro\gdi\renderer\comboboxex.hpp" />
