✨バージョン用ヘッダーを追加

--- a/al2_jd/al2_jd.vcxproj
+++ b/al2_jd/al2_jd.vcxproj
@@ -270,6 +270,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="test_dialog.hpp" />
     <ClInclude Include="utils.hpp" />
+    <ClInclude Include="version.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
