♻️ダイアログのロック機能を別クラスに分離

--- a/al2_jd/al2_jd.vcxproj.filters
+++ b/al2_jd/al2_jd.vcxproj.filters
@@ -345,6 +345,7 @@
     <ClInclude Include="version.hpp">
       <Filter>framework</Filter>
     </ClInclude>
+    <ClInclude Include="lockable.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="main.def">
