--- a/al2_jd/al2_jd.vcxproj.filters
+++ b/al2_jd/al2_jd.vcxproj.filters
@@ -53,6 +53,9 @@
     <Filter Include="kuro\theme\renderer\search_band">
       <UniqueIdentifier>{d2283483-cf35-41a4-b8d5-6cddc770a4e4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="kuro\gdi\renderer\aviutl2\layer_name">
+      <UniqueIdentifier>{c5fb9cbc-e2ba-4475-8443-23e8b39607e3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -346,6 +349,9 @@
       <Filter>framework</Filter>
     </ClInclude>
     <ClInclude Include="lockable.hpp" />
+    <ClInclude Include="kuro\gdi\renderer\aviutl2\layer_name\dialog.hpp">
+      <Filter>kuro\gdi\renderer\aviutl2\layer_name</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="main.def">
