⚡️「MP4出力」の設定ダイアログに対応

--- a/al2_jd/al2_jd.vcxproj.filters
+++ b/al2_jd/al2_jd.vcxproj.filters
@@ -56,6 +56,9 @@
     <Filter Include="kuro\gdi\renderer\aviutl2\layer_name">
       <UniqueIdentifier>{c5fb9cbc-e2ba-4475-8443-23e8b39607e3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="kuro\gdi\renderer\mp4_exporter">
+      <UniqueIdentifier>{ea33b9be-754d-49aa-a387-54e3eb397c87}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -351,6 +354,9 @@
     <ClInclude Include="lockable.hpp" />
     <ClInclude Include="kuro\gdi\renderer\aviutl2\layer_name\dialog.hpp">
       <Filter>kuro\gdi\renderer\aviutl2\layer_name</Filter>
+    </ClInclude>
+    <ClInclude Include="kuro\gdi\renderer\mp4_exporter\dialog.hpp">
+      <Filter>kuro\gdi\renderer\mp4_exporter</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
