--- a/al2_jd/al2_jd.vcxproj
+++ b/al2_jd/al2_jd.vcxproj
@@ -185,6 +185,7 @@ copy /Y "$(SolutionDir)assets\$(TargetName).json" "$(aviutl2_dir)\data\Plugin\al
     <ClInclude Include="config_dialog.hpp" />
     <ClInclude Include="config_io.hpp" />
     <ClInclude Include="kuro\gdi\renderer\aviutl2\layer_name\dialog.hpp" />
+    <ClInclude Include="kuro\gdi\renderer\mp4_exporter\dialog.hpp" />
     <ClInclude Include="lockable.hpp" />
     <ClInclude Include="hive.hpp" />
     <ClInclude Include="io_base.hpp" />
