💥メニューバーとタイトルバーを一体化する機能を追加
✨通常のマウスアクティブ化処理を実行する機能も追加

--- a/al2_jd/al2_jd.vcxproj.filters
+++ b/al2_jd/al2_jd.vcxproj.filters
@@ -376,6 +376,9 @@
     <ClInclude Include="kuro\gdi\renderer\rigaya\dialog.hpp">
       <Filter>kuro\gdi\renderer\rigaya</Filter>
     </ClInclude>
+    <ClInclude Include="kuro\menubar.hpp">
+      <Filter>kuro</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="main.def">
