💥カスタムカラーを指定できるように変更

--- a/al2_jd/al2_jd.vcxproj
+++ b/al2_jd/al2_jd.vcxproj
@@ -184,6 +184,7 @@ copy /Y "$(SolutionDir)assets\$(TargetName).json" "$(aviutl2_dir)\data\Plugin\al
     <ClInclude Include="assets_io.hpp" />
     <ClInclude Include="config_dialog.hpp" />
     <ClInclude Include="config_io.hpp" />
+    <ClInclude Include="kuro\custom_style.hpp" />
     <ClInclude Include="kuro\gdi\renderer\aviutl2\layer_name\dialog.hpp" />
     <ClInclude Include="kuro\gdi\renderer\mp4_exporter\dialog.hpp" />
     <ClInclude Include="kuro\gdi\renderer\rigaya\dialog.hpp" />
@@ -232,7 +233,6 @@ copy /Y "$(SolutionDir)assets\$(TargetName).json" "$(aviutl2_dir)\data\Plugin\al
     <ClInclude Include="kuro\paint\material\dialog.hpp" />
     <ClInclude Include="kuro\paint\material\editbox.hpp" />
     <ClInclude Include="kuro\paint\material\header.hpp" />
-    <ClInclude Include="kuro\paint\material\itemsview.hpp" />
     <ClInclude Include="kuro\paint\material\listbox.hpp" />
     <ClInclude Include="kuro\paint\material\listview.hpp" />
     <ClInclude Include="kuro\paint\material\menu.hpp" />
