♻️フォント関連の処理を別クラスに分離

--- a/al2_jd/al2_jd.vcxproj.filters
+++ b/al2_jd/al2_jd.vcxproj.filters
@@ -380,6 +380,7 @@
       <Filter>kuro</Filter>
     </ClInclude>
     <ClInclude Include="aviutl2_window.hpp" />
+    <ClInclude Include="available_fonts.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="main.def">
