--- a/al2_jd/al2_jd.vcxproj.filters
+++ b/al2_jd/al2_jd.vcxproj.filters
@@ -384,6 +384,9 @@
     <ClInclude Include="kuro\paint\d2d.hpp">
       <Filter>kuro\paint</Filter>
     </ClInclude>
+    <ClInclude Include="kuro\color.hpp">
+      <Filter>kuro</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="main.def">
