✨背景をグラデーション描画する機能を追加
✨ついでに縁を擬似3Dにする機能も追加

--- a/al2_jd/al2_jd.vcxproj.filters
+++ b/al2_jd/al2_jd.vcxproj.filters
@@ -387,6 +387,9 @@
     <ClInclude Include="kuro\color.hpp">
       <Filter>kuro</Filter>
     </ClInclude>
+    <ClInclude Include="kuro\paint\d2d_utils.hpp">
+      <Filter>kuro\paint</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="main.def">
