--- a/assets/custom_color.conf
+++ b/assets/custom_color.conf
@@ -429,3 +429,6 @@ EtchedEdgeOuterTopLeft=
 EtchedEdgeOuterBottomRight=
 EtchedEdgeInnerTopLeft=
 EtchedEdgeInnerBottomRight=
+
+[3DEdge]
+Raised=ffffff60,00000060
