--- a/source/al2_jd/al2_jd.vcxproj.filters
+++ b/source/al2_jd/al2_jd.vcxproj.filters
@@ -376,7 +376,7 @@
     <ClInclude Include="kuro\gdi\renderer\rigaya\dialog.hpp">
       <Filter>kuro\gdi\renderer\rigaya</Filter>
     </ClInclude>
-    <ClInclude Include="kuro\menubar.hpp">
+    <ClInclude Include="kuro\slimbar.hpp">
       <Filter>kuro</Filter>
     </ClInclude>
     <ClInclude Include="kuro\custom_style.hpp">
