🩹トラックバーが正常に描画されない問題に対応

--- a/assets/custom_color.conf
+++ b/assets/custom_color.conf
@@ -378,19 +378,19 @@ NormalTextShadow=
 
 ; トラックバーのつまみです。
 [TrackBarThumb]
-NormalFill=
+NormalFill=,111111ff
 NormalEdge=
 NormalText=
 NormalTextShadow=
-DisableFill=
+DisableFill=,111111ff
 DisableEdge=
 DisableText=
 DisableTextShadow=
-HotFill=
+HotFill=,111111ff
 HotEdge=
 HotText=
 HotTextShadow=
-PressFill=
+PressFill=,111111ff
 PressEdge=
 PressText=
 PressTextShadow=
